--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>vsm college of engineering</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+      veritatis sapiente alias ad illo qui ipsa vitae facilis soluta aliquam
+      illum sit facere aliquid perspiciatis reprehenderit, quasi ullam eum
+      harum!
+    </p>
   </body>
 </html>
